--- a/main.css
+++ b/main.css
@@ -106,7 +106,6 @@ a.nav-brand:hover span{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
   z-index: 1500;
   transition: top .5s ease-in-out;
 }
@@ -117,6 +116,8 @@ a.nav-brand:hover span{
 
 .nav-item{
   list-style: none;
+  margin-left: -25px;
+  margin-top: 25px;
 }
 
 .nav-link{
@@ -285,6 +286,10 @@ img{
 /*Review Section*/
 .review-container{
   margin-top: 50px;
+}
+
+#testimonials h1.section-heading{
+  padding-left: 15px;
 }
 
 .testimonial-text{
